--- a/.drone.yml
+++ b/.drone.yml
@@ -18,6 +18,19 @@ steps:
   commands:
   - go build
 
+- name: release
+  image: golang
+  environment:
+    GITHUB_TOKEN:
+      from_secret: github_token
+  volumes:
+    - name: deps
+      path: /go
+  commands:
+    - curl -sL https://git.io/goreleaser | bash
+  when:
+    event: tag
+
 volumes:
 - name: deps
   temp: {}
