test: fix ci step
add fetch tag step for goreleaser

--- a/.drone.yml
+++ b/.drone.yml
@@ -18,6 +18,13 @@ steps:
   commands:
   - go build
 
+- name: fetch
+  image: docker:git
+  commands:
+    - git fetch --tags
+  when:
+    event: tag
+
 - name: release
   image: golang
   environment:
