--- a/.drone.yml
+++ b/.drone.yml
@@ -34,6 +34,7 @@ steps:
     - name: deps
       path: /go
   commands:
+    - go mod download
     - curl -sL https://git.io/goreleaser | bash
   when:
     event: tag
